--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose
 torch==2.1.0
 torchvision==0.16.0 
 opencv-python
+gradio
+git+https://github.com/facebookresearch/detectron2@main#subdirectory=projects/DensePose
